Changes for 4.2.0rc1

New features:

Bug fixes:
A.F....... [ZBX-15386] fixed Trigger overview not showing OK triggers (vasilijs)
A.F....... [ZBX-14538] fixed error message when value of lifetime or history/trends storage period is out of range (agriscenko)
A.F....... [ZBX-15614] fixed validation of y axis item on classic graph create and update (agriscenko)
..F....... [ZBX-15226] fixed missing visual gap under page title (gcalenko)
..F....... [ZBX-15560] fixed incorrect URL argument formatting when parameters are non-indexed arrays (Ivo)
..F....... [ZBX-15719] fixed undefined index in trigger expression popup (Ivo)
..F....... [ZBX-15332] fixed dashboard svg graph update on timeselector interval change (gcalenko)
...G...... [ZBX-15728] fixed agent startup problem in Win 2008 R2 w/o SP1, removed dependency on version helper API (kalimulin)

--------------------------------------------------------------------------------
Changes for 4.2.0beta2

New features:
A.F....PS. [ZBXNEXT-158] added ability to use discovery returned string as hostname and visible name (akozlovs, vasilijs)
....I..... [ZBXNEXT-5013] removed adaptive chunking from TimescaleDB script (kalimulin)
........S. [ZBXNEXT-5016] extended preprocessing error messages to include intermediate step results (wiper)
...G...... [ZBXNEXT-4898] added support IPv6 for "net.dns" and "net.dns.record" (MVekslers)
.......PS. [ZBXNEXT-5037] added "skip" parameter for vmware.eventlog key (MVekslers)
..F....... [ZBXNEXT-4819] implemented date and time showing in SVG graph widget (miks)

Bug fixes:
..F....... [ZBX-15622] fixed trigger expression test dialog not being usable with long trigger expressions (talbergs)
..F....... [ZBX-13332] fixed issue for large post data in web scenario steps (talbergs)
...G...... [ZBX-15607] fixed possibility of zombie processes occurring when signaling agent during metric execution (akozlovs)
.D........ [ZBX-10496] fixed links to installation instructions in README file (dimir)